vendor/ocaml/testsuite/tests/typing-objects/pr6383.ml.reference

# Characters 11-16:
  let f (x: #M.foo) = 0;;
             ^^^^^
Error: Unbound module M
# 
