vendor/ocaml/testsuite/tests/typing-objects/pr6383.ml
let f (x: #M.foo) = 0;;
